# typescript-bazel-issue

./: BUILD.bazel  README.md  WORKSPACE  mycompiler.ts  package.json  tsconfig.json  utils.ts
